// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Template only with content 1`] = `
"
		# Before
		<!-- .slide:  -->

	# MyContent

		# After
		"
`;

exports[`Template with invisible variable not set 1`] = `
"
		<!-- .slide: class=\\"drop\\" -->

	# MyContent

		# After<div class=\\"reset-margin\\" style=\\"position: absolute; left: 0px; top: 658px; height: 42px; min-height: 42px; width: 960px; display: flex; flex-direction: column; align-items: center; justify-content: space-evenly\\" >

		
		</div>
		"
`;

exports[`Template with variable not set 1`] = `
"
		<!-- .slide: class=\\"drop\\" -->

	# MyContent

		# After<div class=\\"reset-margin\\" style=\\"position: absolute; left: 0px; top: 658px; height: 42px; min-height: 42px; width: 960px; display: flex; flex-direction: column; align-items: center; justify-content: space-evenly\\" >

		<% footer %>
		</div>
		"
`;

exports[`Template with variable set 1`] = `
"
		<!-- .slide: class=\\"drop\\" -->

# MyContent


	

		# After<div class=\\"reset-margin\\" style=\\"position: absolute; left: 0px; top: 658px; height: 42px; min-height: 42px; width: 960px; display: flex; flex-direction: column; align-items: center; justify-content: space-evenly\\" >

		<div class=\\"block\\">

# Hello
</div>


		</div>
		"
`;
